2022-10-25T16:35:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3322689565 # 553
* notice: last 14d: unq all: 1 24
* notice: prev accum: outdated-unq outdated-all / unq all: 220 404 / 234 428
* notice: next accum: outdated-unq outdated-all / unq all: 221 405 / 234 429
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2022-10-11] / [2022-10-25]

2022-10-25T08:32:32Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3319356131 # 552
* notice: last 14d: unq all: 1 24
* notice: prev accum: outdated-unq outdated-all / unq all: 220 404 / 233 427
* notice: next accum: outdated-unq outdated-all / unq all: 220 404 / 234 428
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-25]

2022-10-25T01:56:27Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3317599079 # 551
* notice: last 14d: unq all: 1 23
* notice: prev accum: outdated-unq outdated-all / unq all: 219 402 / 233 424
* notice: next accum: outdated-unq outdated-all / unq all: 220 404 / 233 427
* notice: prev exec diff / last date diff / accum: unq all: +0 +2 -0 -0 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [2022-10-10] / [2022-10-24]

2022-10-24T08:33:13Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3311194706 # 549
* notice: last 14d: unq all: 1 22
* notice: prev accum: outdated-unq outdated-all / unq all: 219 402 / 232 424
* notice: next accum: outdated-unq outdated-all / unq all: 219 402 / 233 424
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-10 2022-10-24]

2022-10-24T02:03:35Z: