@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-25T16:35:36Z",
+  "timestamp" : "2022-10-26T01:40:50Z",
   "count_outdated" : 405,
   "uniques_outdated" : 221,
-  "count" : 429,
-  "uniques" : 234,
+  "count" : 430,
+  "uniques" : 235,
   "clones" : [
     {
       "timestamp": "2022-10-12T00:00:00Z",
@@ -91,10 +91,10 @@
     },
     {
       "timestamp": "2022-10-25T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
