@@ -1,6 +1,6 @@
 {
-  "count": 24,
-  "uniques": 1,
+  "count": 25,
+  "uniques": 2,
   "clones": [
     {
       "timestamp": "2022-10-12T00:00:00Z",
@@ -64,8 +64,8 @@
     },
     {
       "timestamp": "2022-10-25T00:00:00Z",
-      "count": 2,
-      "uniques": 1
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
