@@ -1,3 +1,11 @@
+2022-10-26T01:40:50Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3325558038 # 554
+* notice: last 14d: unq all: 2 25
+* notice: prev accum: outdated-unq outdated-all / unq all: 221 405 / 234 429
+* notice: next accum: outdated-unq outdated-all / unq all: 221 405 / 235 430
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [] / [2022-10-25]
+
 2022-10-25T16:35:36Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3322689565 # 553
 * notice: last 14d: unq all: 1 24
